PROGPER-5025-4(разделил файл import.sql на несколько файлов хранящий sql-скрипт для создания только одной таблицы)